--- a/SimplePerfChart/SimplePerfChart/DemoApplication.csproj
+++ b/SimplePerfChart/SimplePerfChart/DemoApplication.csproj
@@ -59,6 +59,10 @@
     <Reference Include="GMap.NET.WindowsForms">
       <HintPath>..\..\..\TA\GUI\Release-NETv4.0\GMap.NET.WindowsForms.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="RabbitMQ.Client">
       <HintPath>..\..\..\TA\RabbitMQ\bin\RabbitMQ.Client.dll</HintPath>
     </Reference>
@@ -70,9 +74,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FrmTestingForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="FrmTestingForm.cs" />
     <Compile Include="FrmTestingForm.Designer.cs">
       <DependentUpon>FrmTestingForm.cs</DependentUpon>
     </Compile>
@@ -93,6 +95,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
