--- a/SimplePerfChart/SimplePerfChart/DemoApplication.csproj
+++ b/SimplePerfChart/SimplePerfChart/DemoApplication.csproj
@@ -95,6 +95,10 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.config" />
+    <None Include="config.dev.json" />
+    <None Include="config.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
