--- a/SimplePerfChart/SimplePerfChart/DemoApplication.csproj
+++ b/SimplePerfChart/SimplePerfChart/DemoApplication.csproj
@@ -54,17 +54,20 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="GMap.NET.Core">
-      <HintPath>..\..\..\TA\GUI\Release-NETv4.0\GMap.NET.Core.dll</HintPath>
+      <HintPath>..\..\..\..\TA\GUI\Release-NETv4.0\GMap.NET.Core.dll</HintPath>
     </Reference>
     <Reference Include="GMap.NET.WindowsForms">
-      <HintPath>..\..\..\TA\GUI\Release-NETv4.0\GMap.NET.WindowsForms.dll</HintPath>
+      <HintPath>..\..\..\..\TA\GUI\Release-NETv4.0\GMap.NET.WindowsForms.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="RabbitMQ.Client">
-      <HintPath>..\..\..\TA\RabbitMQ\bin\RabbitMQ.Client.dll</HintPath>
+      <HintPath>..\..\..\..\TA\RabbitMQ\bin\RabbitMQ.Client.dll</HintPath>
+    </Reference>
+    <Reference Include="RabbitMQ.ServiceModel">
+      <HintPath>..\..\..\..\TA\RabbitMQ\bin\RabbitMQ.ServiceModel.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -74,7 +77,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FrmTestingForm.cs" />
+    <Compile Include="FrmTestingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmTestingForm.Designer.cs">
       <DependentUpon>FrmTestingForm.cs</DependentUpon>
     </Compile>
